src/app/components/Teaser/Teaser.css
.countdown{
    height: 100%;
    width: 100%;
    color:var(--off-white);
    font-size:10.1em;
    font-family: var(--font-feature-display-condensed);
    -webkit-text-stroke: 1px var(--dark-brown);
    letter-spacing: -0.03em;
    text-align: center;
    line-height:140px;
    z-index: 1000;

}
.teaser-textcontent{
    position: absolute;
    top:0;
    z-index: 100;
    pointer-events: none;
}

.fulltext-gridcell{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: left;
    padding-left:24px;
    padding-right:24px;
    gap: 8px;
    height: 100%;
    width: 100%;
}

.redblock{
    height:100%;
    width: 100%;
    background-color:red;

}

